<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spider_sec_bg"
    tools:context=".view.Authentication.RegisterPage">

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_50dp"
        android:layout_above="@+id/rp_et_email"
        android:src="@drawable/spider_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/rp_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_txt"
        android:inputType="text"
        android:fontFamily="@font/standard"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_20dp"
        android:padding="@dimen/_15dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:textSize="@dimen/_14sp"
        android:layout_above="@+id/rp_et_password"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded,TextFields" />

    <EditText
        android:id="@+id/rp_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_above="@+id/rp_et_confirm_password"
        android:layout_marginTop="@dimen/_12dp"
        android:padding="@dimen/_15dp"
        android:fontFamily="@font/standard"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/rp_et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:fontFamily="@font/standard"
        android:layout_marginTop="@dimen/_12dp"
        android:padding="@dimen/_15dp"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp"
        android:layout_above="@+id/rp_et_regBtn"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/rp_et_regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RedButtonStyle"
        android:background="@drawable/spider_button_bg"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/medium"
        android:textSize="@dimen/_12sp"
        android:layout_above="@+id/rp_et_toLogin"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/rp_et_toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/standard"
        android:text="@string/already_have_and_account_sign_in"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_14sp"/>
</RelativeLayout>