<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Dashboard.InventorySpiderDetailsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Dashboard.InventorySpiderDetailsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Header with Back Button -->
            <LinearLayout
                android:id="@+id/spiderDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/maroon"
                android:padding="@dimen/_16dp"
                android:gravity="center_vertical">

                <!-- Back Button -->
                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:src="@drawable/ic_back_arrow" />

                <!-- Header -->
                <TextView
                    android:id="@+id/spiderDetailsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spiderDetails"
                    android:fontFamily="@font/medium"
                    android:textSize="@dimen/_25sp"
                    android:textColor="@color/white"
                    android:background="@color/maroon"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Content Layout -->
            <RelativeLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spiderDetailsLayout"
                android:padding="@dimen/_20dp">

                <!-- Spider Image -->
                <ImageView
                    android:id="@+id/spiderImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/spider_image_placeholder" />

                <!-- Spider Name and Favorite Icon -->
                <TextView
                    android:id="@+id/spiderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spiderImage"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_16dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/lunhaw"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_35sp" />

                <ImageView
                    android:id="@+id/favoriteIcon"
                    android:layout_width="@dimen/_40dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/spiderName"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:src="@drawable/ic_star"
                    android:contentDescription="@string/favorite_icon" />

                <TextView
                    android:id="@+id/spiderSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spiderName"
                    android:layout_marginStart="@dimen/_16dp"
                    android:fontFamily="@font/standard"
                    android:text="@string/size_super_jumbo"
                    android:textSize="@dimen/_15sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/spiderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spiderSize"
                    android:layout_marginStart="16dp"
                    android:text="@string/status_active"
                    android:textColor="@color/green"
                    android:fontFamily="@font/standard"
                    android:textSize="@dimen/_15sp" />

                <!-- Description -->
                <TextView
                    android:id="@+id/spiderDescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spiderStatus"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/description"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:id="@+id/spiderDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spiderDescriptionLabel"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/standard"
                    android:justificationMode="inter_word"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_morbi_non_diam_sit_amet_odio_viverra_aliquet"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sp" />
            </RelativeLayout>

            <!-- Buttons Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contentLayout"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/editDetailsButton"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon"
                    android:text="@string/edit_details"
                    android:fontFamily="@font/medium"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/deleteDetailsButton"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:text="@string/delete_details"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="@dimen/_8dp" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>


</RelativeLayout>