<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_410dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/_16dp"
        android:background="@color/maroon">

        <ImageButton
            android:id="@+id/i_close_btn"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_close_btn_white" />

        <TextView
            android:id="@+id/dialog_spider_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_22sp"
            android:fontFamily="@font/medium"
            android:singleLine="true"
            android:layout_below="@+id/i_close_btn"
            android:text="@string/edit_your_spider"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/dialog_spider_name"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_below="@id/dialog_spider_txt"
            android:hint="@string/name"
            android:fontFamily="@font/standard"
            android:textSize="@dimen/_14sp"
            android:singleLine="true"
            android:paddingStart="@dimen/_15dp"
            android:paddingEnd="@dimen/_15dp"
            android:background="@drawable/spider_white_container_box"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/dialog_spider_quantity"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_8dp"
            android:hint="@string/quantity"
            android:fontFamily="@font/standard"
            android:textSize="@dimen/_14sp"
            android:inputType="number"
            android:paddingStart="@dimen/_15dp"
            android:paddingEnd="@dimen/_15dp"
            android:singleLine="true"
            android:layout_below="@id/dialog_spider_name"
            android:background="@drawable/spider_white_container_box"
            android:layout_height="@dimen/_50dp"/>

        <RelativeLayout
            android:id="@+id/dialog_spider_desc"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_8dp"
            android:gravity="top"
            android:paddingTop="@dimen/_15dp"
            android:layout_below="@id/dialog_spider_quantity"
            android:background="@drawable/spider_white_container_box"
            android:layout_height="@dimen/_120dp">

            <ImageView
                android:id="@+id/add_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_image_icon"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_image_view"
                android:layout_centerHorizontal="true"
                android:textColor="@color/gray"
                android:fontFamily="@font/medium"
                android:textSize="@dimen/_12sp"
                android:text="@string/add_image"/>


        </RelativeLayout>

        <Button
            android:id="@+id/dialog_save_spiderBtn"
            style="@style/WhiteButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_spider_desc"
            android:layout_marginHorizontal="@dimen/_50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/medium"
            android:text="@string/save"
            android:textColor="@color/maroon"
            android:textSize="@dimen/_14sp" />

    </RelativeLayout>

</RelativeLayout>